# where_to_go

./: .gitignore  Makefile  pyproject.toml  readme.md
places/: admin.py  models.py  urls.py  views.py
places/management/commands/: _place_loader.py  load_place.py
places/migrations/: 0001_initial.py  0002_alter_place_description_long_and_more.py  0003_alter_placeimage_options_and_more.py  0004_alter_place_title.py  0005_alter_placeimage_unique_together.py  0006_alter_place_description_short.py  0007_rename_description_long_place_long_description_and_more.py  0008_alter_place_options_alter_placeimage_options_and_more.py  0009_alter_placeimage_position.py  0010_alter_place_long_description_and_more.py  0011_alter_placeimage_position.py
templates/: index.html
where_to_go/: settings.py  urls.py
