[tool.poetry]
name = "where-to-go"
version = "0.1.0"
description = "Educational project about finding nice places."
authors = ["Andrey Miskov <amiskov@gmail.com>"]
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"
pillow = "^10.0.1"
django-extensions = "^3.2.3"
django-admin-sortable2 = "^2.1.10"
django-tinymce = "^3.6.1"
environs = "^9.5.0"
gunicorn = "^21.2.0"
django-storages = "^1.14.1"
paramiko = "^3.3.1"
whitenoise = "^6.5.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"
django-extensions = "^3.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
